--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper">
             <div class="navbar">
                 <div class="logo">
-                    <img src="200w.jpeg" height="92px"  >
+                    <img src="logo gif.jpeg" height="92px"  >
                 </div>
                 <ul class="navlist">
                     <li><a href="#">Home</a></li>
@@ -24,7 +24,7 @@
             </div>
                 
             <div class="hero">
-                <img src="81YhTZJEsIL.jpg" alt="">
+                <img src="product.jpg" alt="">
                 <div class="content">
                     <h3>Gifting Beauty</h3>
                     <h1>Love Beauty & Planet</h1>
